# chat_kindness

./: main.py  pyproject.toml  results.csv
app/: config.py  conversation_splitter.py  kindness.py  utils.py
